List of languages in docs now generated automatically

--- a/app/views/documentation/faq/_languages.html.haml
+++ b/app/views/documentation/faq/_languages.html.haml
@@ -1,30 +1,13 @@
 %p
   Scrapers can be written in
-  #{link_to "Ruby", "https://www.ruby-lang.org/en/"},
-  #{link_to "PHP", "http://www.php.net/"},
-  #{link_to "Python", "https://www.python.org/"},
-  or
-  #{link_to "Perl", "http://www.perl.org/"}.
+  #{Morph::Language.languages_supported.map{|l| link_to Morph::Language.human(l), Morph::Language.website(l)}.to_sentence(last_word_connector: " or ").html_safe}.
   Simply follow the naming convention:
 
 %ul
-  %li
-    = image_tag("languages/ruby.png", size: "20x20")
-    Ruby -
-    %code
-      scraper.rb
-  %li
-    = image_tag("languages/php.png", size: "20x20")
-    PHP -
-    %code
-      scraper.php
-  %li
-    = image_tag("languages/python.png", size: "20x20")
-    Python -
-    %code
-      scraper.py
-  %li
-    = image_tag("languages/perl.png", size: "20x20")
-    Perl -
-    %code
-      scraper.pl
+  - Morph::Language.languages_supported.each do |l|
+    %li
+      = image_tag(Morph::Language.image_path(l), size: "20x20")
+      = Morph::Language.human(l)
+      \-
+      %code
+        = Morph::Language.language_to_scraper_filename(l)
