--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -11,7 +11,7 @@
             %span.form-wrapper
               %select.form-control#scraper_original_language(name="scraper[original_language]")
                 - Morph::Language.languages_supported2.each do |l|
-                  %option{value: l.to_s, data:{content: "#{image_tag(l.image_path, size: '20x20')} #{l.human}"}} #{l.human}
+                  %option{value: l.key, data:{content: "#{image_tag(l.image_path, size: '20x20')} #{l.human}"}} #{l.human}
               %span.help-block
                 The language you would like to write your scraper in. You can change this later.
       .row
