--- a/app/views/documentation/faq/_languages.html.haml
+++ b/app/views/documentation/faq/_languages.html.haml
@@ -1,6 +1,6 @@
 %p
   Scrapers can be written in
-  #{Morph::Language.languages_supported2.map{|l| link_to l.human, l.website}.to_sentence(last_word_connector: " or ").html_safe}.
+  #{Morph::Language.languages_supported.map{|l| link_to l.human, l.website}.to_sentence(last_word_connector: " or ").html_safe}.
   Simply follow the naming convention:
 
 %table.table
@@ -9,7 +9,7 @@
       %th Language
       %th What to call the main scraper file
   %tbody
-    - Morph::Language.languages_supported2.each do |l|
+    - Morph::Language.languages_supported.each do |l|
       %tr
         %td
           = image_tag(l.image_path, size: "20x20")
