--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -5,15 +5,7 @@
     = f.inputs do
       .row
         .col-sm-6
-          .select.input.optional.form-group#scraper_original_language_key_input
-            %label.control-label(for="scraper_original_language_key")
-              Language
-            %span.form-wrapper
-              %select.form-control#scraper_original_language_key(name="scraper[original_language_key]")
-                - Morph::Language.languages_supported.each do |l|
-                  %option{value: l.key, data:{content: "#{image_tag(l.image_path, size: '20x20')} #{l.human}"}} #{l.human}
-              %span.help-block
-                The language you would like to write your scraper in. You can change this later.
+          = f.input :original_language_key, collection: Morph::Language.languages_supported.map{|l| [l.human, l.key, {"data-content" => "#{image_tag(l.image_path, size: '20x20')} #{l.human}"}]}, include_blank: false, hint: "The language you would like to write your scraper in. You can change this later.", label: "Language"
       .row
         .col-sm-2
           = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id]}, include_blank: false
