Beginning of php buildpacks docs

--- a/app/views/documentation/buildpacks.html.haml
+++ b/app/views/documentation/buildpacks.html.haml
@@ -3,7 +3,7 @@
 .alert.alert-info
   %i.fa.fa-flask.fa-3x.pull-left
   Buildpacks are currently <strong>experimental</strong> and not available to everyone. If you would like access
-  to Buildpacks and agree to give us feedback please
+  to Buildpacks and <strong>agree to give us feedback</strong> please
   = mail_to "contact@oaf.org.au", "contact us"
   (letting us know which user or organisation you would like it for) and we'll enable the feature for you.
 
