Make footer muted

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -78,7 +78,7 @@
     = render "heap_analytics_identify"
 
     %footer
-      .container
+      .container.text-muted
         %p
           Made with
           %i.fa.fa-heart-o.fa-lg
