--- a/app/views/documentation/what_is_new.html.haml
+++ b/app/views/documentation/what_is_new.html.haml
@@ -1,6 +1,6 @@
 .row
-  .col-sm-10
+  .col-sm-9
     :markdown
       #{render partial: "what_is_new.md"}
-  .col-sm-2
-    = link_to "Improve this page", "https://github.com/openaustralia/morph/blob/master/app/views/documentation/_what_is_new.md", class: "btn btn-default"
+  .col-sm-3
+    = improve_button "Improve this page", "_what_is_new.md"
