--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -105,7 +105,7 @@
     - if current_user
       = curl_command(content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), content_tag(:span, CGI::escape(current_user.api_key), class: "api_key"), content_tag(:span, CGI::escape(@query), class: "query"), content_tag(:span, "", class: "callback"))
     - else
-      = curl_command(content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), content_tag(:span, "[api_key]", class: "api_key"), content_tag(:span, CGI::escape(@query), class: "query"), content_tag(:span, "", class: "callback"))
+      = curl_command(content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), "[api_key]", content_tag(:span, CGI::escape(@query), class: "query"), content_tag(:span, "", class: "callback"))
 
 :javascript
   $(function() {
