--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -82,11 +82,7 @@
               %span.help-block
                 Don't tell anyone else what the api key is
         .col-sm-3
-          .select.input.optional.form-group#owner_input
-            %select.form-control#owner(name="owner")
-              = options_for_select(current_user.all_owners.map{|o| [o.nickname, o.api_key]})
-            %span.help-block
-              Choose which api key you want to use
+          = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.api_key, {"data-content" => "#{owner_image(o, 20, false)} #{o.nickname}"}]}, include_blank: false, hint: "Choose which api key you want to use", label: false
     - else
       .row
         .col-sm-6
@@ -120,7 +116,7 @@
     }
 
     function update_api_key() {
-      api_key = $("#owner").val();
+      api_key = $("#scraper_owner_id").val();
       $("#api_key").html(api_key);
       $("code span.api_key").html(encodeURIComponent(api_key));
     }
@@ -184,7 +180,7 @@
 
     $("#scraper_full_name").change(update_full_name).keyup(update_full_name);
     $("#query").change(update_query).keyup(update_query);
-    $("#owner").change(update_api_key);
+    $("#scraper_owner_id").change(update_api_key);
     $("#format").change(update_format);
     $("#callback").change(update_callback).keyup(update_callback);
     $("#title").change(update_atom_query).keyup(update_atom_query);
