--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -99,31 +99,39 @@
 %pre
   %code
     - if current_user
-      = curl_command(content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), content_tag(:span, CGI::escape(current_user.api_key), class: "api_key"), content_tag(:span, CGI::escape(@query), class: "query"), content_tag(:span, "", class: "callback"))
+      = curl_command_linked(content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), content_tag(:span, CGI::escape(current_user.api_key), class: "api_key"), content_tag(:span, CGI::escape(@query), class: "query"), content_tag(:span, "", class: "callback"))
     - else
       = curl_command(content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), "[api_key]", content_tag(:span, CGI::escape(@query), class: "query"), content_tag(:span, "", class: "callback"))
 
 :javascript
   $(function() {
-    var selects = {}
+    var selects = {};
+
+    function update_link_url() {
+      $("#api_link").attr("href", $("#api_link").text());
+    }
 
     function update_full_name() {
       $("code span.full_name").html($("#scraper_full_name").val());
+      update_link_url();
     }
 
     function update_query() {
       $("code span.query").html(encodeURIComponent($("#query").val()));
+      update_link_url();
     }
 
     function update_api_key() {
       api_key = $("#scraper_owner_id").val();
       $("#api_key").html(api_key);
       $("code span.api_key").html(encodeURIComponent(api_key));
+      update_link_url();
     }
 
     function update_format() {
       var format = $("#format").val();
       $("code span.format").html(format);
+      update_link_url();
       if (format == "json") {
         if (!(typeof save_callback === 'undefined')) {
           $("#callback").val(save_callback);
@@ -153,6 +161,7 @@
       else {
         $("code span.callback").html("&callback=" + v);
       }
+      update_link_url();
     }
 
     function update_atom_query(string) {
