--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -90,20 +90,28 @@
           .col-md-4.col-md-pull-4.col-sm-6
             %h4 contact us
             %ul.list-unstyled
-              %li= link_to "@morph_io on Twitter", "https://twitter.com/morph_io"
               %li
-                Email us at
+                %i.fa.fa-twitter
+                = link_to "@morph_io", "https://twitter.com/morph_io"
+              %li
+                %i.fa.fa-envelope
                 = mail_to "contact@oaf.org.au"
-              %li= link_to "GitHub issues", "https://github.com/openaustralia/morph/issues?state=open"
+              %li
+                %i.fa.fa-github-alt
+                = link_to "GitHub", "https://github.com/openaustralia/morph"
           .col-md-4.text-right.col-sm-6
             %h4 morph.io is open source
             %ul.list-unstyled
               %li
-                %i.fa.fa-github-sign
-                = link_to "Source code on GitHub", "https://github.com/openaustralia/morph"
+                = link_to "Source code", "https://github.com/openaustralia/morph"
+                %i.fa.fa-github-alt
               %li
+                = link_to "https://github.com/openaustralia/morph/issues?state=open", target: "_blank" do
+                  Suggest a
+                  %strong feature
+                  or report an
+                  %strong issue
                 %i.fa.fa-bug
-                = link_to "Report an issue or suggest a feature", "https://github.com/openaustralia/morph/issues?state=open", target: "_blank"
               %li
-                %i.fa.fa-bug
-                = link_to "Development priorities on waffle.io", "https://waffle.io/openaustralia/morph", target: "_blank"
+                = link_to "waffle.io", "https://waffle.io/openaustralia/morph", target: "_blank"
+                %i.fa.fa-flag
