Make git revision small

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -115,4 +115,5 @@
               %li
                 = link_to "waffle.io", "https://waffle.io/openaustralia/morph", target: "_blank"
                 %i.fa.fa-flag
-            %p= link_to APP_VERSION, "https://github.com/openaustralia/morph/commit/#{APP_VERSION}"
+            %p
+              %small= link_to APP_VERSION, "https://github.com/openaustralia/morph/commit/#{APP_VERSION}"
