--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,7 +42,13 @@
                 %li(class="divider")
                 %li= link_to "Add scraper from GitHub", github_new_scraper_path
                 %li= link_to "Fork scraper from ScraperWiki", scraperwiki_new_scraper_path
-            %li= link_to "Browse", scrapers_path
+            %li.dropdown
+              = link_to "#", class: "dropdown-toggle", data: {toggle: "dropdown"} do
+                Browse
+                %b.caret
+              %ul.dropdown-menu
+                %li= link_to "Scrapers", scrapers_path
+                %li= link_to "Users", users_path
             %li= link_to "Pricing", pricing_path
             %li= link_to "Documentation", documentation_index_path
             - if user_signed_in? && current_user.admin?
