Don't show all the stuff at the bottom with signed out

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -1,5 +1,5 @@
 .container
-  - unless signed_in?
+  - if signed_in?
+    = render "signed_in_index"
+  - else
     = render "signed_out_index"
-
-  = render "signed_in_index"
