--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -48,3 +48,19 @@ footer {
 .text-muted a {
   color: #777;
 }
+
+.container#banner {
+  h1 {
+    .brand {
+      font-family: 'Comfortaa', cursive;
+      text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
+    }
+    font-size: 5em;
+  }
+  h2 {
+    font-size: 4em;
+  }
+  width: 100%;
+  height: 500px;
+  color: white;
+}
