--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -1,18 +1,22 @@
+.container#banner
+  .row.text-center
+    %h1
+      %span.brand
+        morph.io
+    %h2 Take the hassle out of web scraping
+    %h3 With all the power to scrape anything, anywhere
+    = link_to "Get started", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
+
+:javascript
+  $(".container#banner").backstretch("#{image_path("unsplash/SxzoRwBVRgiIliTBXr2h_kyoyo.jpg")}");
+  //$.backstretch("#{image_path("unsplash/SxzoRwBVRgiIliTBXr2h_kyoyo.jpg")}");
+
 .container
   .jumbotron
     .row
       .col-md-4
         = image_tag "logo.png", size: "300x300", class: "img-responsive"
       .col-md-8
-        %h1
-          Morph
-          %small
-            -# A scraping platform
-            A
-            = link_to "Heroku", "https://www.heroku.com/"
-            for
-            = link_to "Scrapers", "https://en.wikipedia.org/wiki/Web_scraping"
-        %h2 Get structured data out of the web
         %ul.list-unstyled
           %li
             All code and collaboration through
@@ -33,7 +37,6 @@
             = link_to "ScraperWiki Classic", "https://classic.scraperwiki.com/"
           %li
             Email alerts for broken scrapers
-          = link_to "Get started", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
 
   %ul.list-inline
     %li
