make text positioning work a little better when resizing window

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -4,8 +4,9 @@
       %span.brand
         morph.io
     %h2 Take the hassle out of web scraping
-    %h3 With all the power to scrape anything, anywhere
-    = link_to "Get started", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
+    .lower
+      %h3 With all the power to scrape anything, anywhere
+      = link_to "Get started", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
 
 :javascript
   $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}");
