--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -60,8 +60,10 @@ footer {
   h2 {
     font-size: 4em;
   }
-  h3 {
-    margin-top: 170px;
+  .lower {
+      position: absolute;
+      width: 100%;
+      top: 330px;
   }
   width: 100%;
   height: 500px;
