make the text about you

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -5,7 +5,7 @@
         morph.io
     %h2 Take the hassle out of web scraping
     .lower
-      %h3 With all the power to scrape anything, anywhere
+      %h3 With all the power so you can scrape anything, anywhere
       = link_to "Get started", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
 
 :javascript
