starting with sheep
Well its all about getting things, and things here, are sheep.

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -6,7 +6,7 @@
     %h2 Take the hassle out of web scraping
     .lower
       %h3 With all the power so you can scrape anything, anywhere
-      = link_to "Get started", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
+      = link_to "Get sheep", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
 
 :javascript
   $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}");
