move brand from banner to top left menu
and offset the banner text

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -4,7 +4,7 @@
       %button.navbar-toggle(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1")
         %span.sr-only Toggle navigation
         %span.fa.fa-bars
-      = link_to "Morph", root_path, class: "navbar-brand"
+      = link_to "morph.io", root_path, class: "navbar-brand"
     .collapse.navbar-collapse#bs-example-navbar-collapse-1
       %ul.nav.navbar-nav
         -# TODO set class to "active" when this is the current page
