--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -61,6 +61,9 @@ footer {
 		margin-top: 70px;
 	}
   }
+  h2,h3 {
+	text-shadow: 0px .5px 3px rgba(20,30,0,0.4);
+  }
   .lower {
       position: absolute;
       width: 100%;
