--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -8,6 +8,22 @@
 :javascript
   $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}");
 
+.container#benefits
+  .row
+    .col-md-4 
+      %i.fa.fa-language.fa-4x
+      %p 
+        Write in your scraper in the language you know and love because Ruby Perl, Python and PHP are all supported
+    .col-md-4 
+      %i.fa.fa-recycle.fa-4x
+      %p 
+        Over 1000 public scrapers, with data, available for you to reuse, for free
+    .col-md-4 
+      %i.fa.fa-cloud.fa-4x
+      %p 
+        Set it and forget it! Your scraper runs in the cloud to your schedule and emails you if there are any problems.
+          
+    
 .container
   .jumbotron
     .row
