improved wording for benefits, added headers

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -11,10 +11,10 @@
   text-align: center;
   padding-top: 40px; 
   .col-md-4 {
-    p {
+    h4 {
       padding-top: 25px;
     }
     padding-top: 30px;
   }
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
