--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -12,16 +12,20 @@
   .row
     .col-md-4 
       %i.fa.fa-language.fa-4x
+      %h4 Speaks your language
       %p 
-        Write in your scraper in the language you know and love because Ruby Perl, Python and PHP are all supported
+        Write in your scraper in the language you know and love because #{link_to "Ruby",       "https://www.ruby-lang.org"}, #{link_to "Python", "http://www.python.org"}, #{link_to "PHP", "http://www.php.net"}
+        and #{link_to "Perl", "http://www.perl.org/"} are all supported
     .col-md-4 
       %i.fa.fa-recycle.fa-4x
+      %h4 Over 1000 scrapers with data
       %p 
         Over 1000 public scrapers, with data, available for you to reuse, for free
     .col-md-4 
       %i.fa.fa-cloud.fa-4x
+      %h4 Set it up and forget about it
       %p 
-        Set it and forget it! Your scraper runs in the cloud to your schedule and emails you if there are any problems.
+        Your scraper runs in the cloud to your schedule and emails you if there are any problems
           
     
 .container
