Improved benefits section spacing, added bg colour

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -9,23 +9,24 @@
   $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}");
 
 .container#benefits
-  .row
-    .col-md-4 
-      %i.fa.fa-language.fa-4x
-      %h4 Speaks your language
-      %p 
-        Write in your scraper in the language you know and love because #{link_to "Ruby",       "https://www.ruby-lang.org"}, #{link_to "Python", "http://www.python.org"}, #{link_to "PHP", "http://www.php.net"}
-        and #{link_to "Perl", "http://www.perl.org/"} are all supported
-    .col-md-4 
-      %i.fa.fa-recycle.fa-4x
-      %h4 Over 1000 scrapers with data
-      %p 
-        Over 1000 public scrapers, with data, available for you to reuse, for free
-    .col-md-4 
-      %i.fa.fa-cloud.fa-4x
-      %h4 Set it up and forget about it
-      %p 
-        Your scraper runs in the cloud to your schedule and emails you if there are any problems
+  .container
+    .row
+      .col-md-4 
+        %i.fa.fa-language.fa-4x
+        %h4 Speaks your language
+        %p 
+          Write in your scraper in the language you know and love because #{link_to "Ruby",       "https://www.ruby-lang.org"}, #{link_to "Python", "http://www.python.org"}, #{link_to "PHP", "http://www.php.net"}
+          and #{link_to "Perl", "http://www.perl.org/"} are all supported
+      .col-md-4 
+        %i.fa.fa-recycle.fa-4x
+        %h4 Over 1000 scrapers with data
+        %p 
+          Over 1000 public scrapers, with data, available for you to reuse, for free
+      .col-md-4 
+        %i.fa.fa-cloud.fa-4x
+        %h4 Set it up and forget about it
+        %p 
+          Your scraper runs in the cloud to your schedule and emails you if there are any problems
           
     
 .container
