--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -8,6 +8,8 @@
 }
 
 .container#benefits {
+  width: 100%;
+  background-color: #F5FFE7;
   text-align: center;
   padding-top: 40px; 
   .col-md-4 {
