--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -14,9 +14,9 @@ html {
 body {
   padding-top: 52px;
   @media (min-width: 768px) {
-    margin-bottom: 220px;
+    margin-bottom: 170px;
   }
-  margin-bottom: 309px;
+  margin-bottom: 259px;
 }
 
 footer {
@@ -24,11 +24,12 @@ footer {
   bottom: 0;
   width: 100%;
   @media (min-width: 768px) {
-    height: 200px
+    height: 150px
   }
-  height: 289px;
+  height: 239px;
   padding: 1em 0;
-  background-color: #f5f5f5;
+  background-color: #0A2A1B;
+  colour: #FAFAFA;
 }
 
 .sign_in {
@@ -40,7 +41,7 @@ footer {
 .alert {
   margin-top: 20px;
 }
-
+  
 
 .text-muted a {
   color: #777;
