change formatting of user quotes
- list + row/column

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -28,7 +28,7 @@ footer {
   }
   height: 239px;
   padding: 1em 0;
-  background-color: #0A2A1B;
+  background-color: #2E3B0B;
   colour: #FAFAFA;
 }
 
