Preprocess markdown in erb so that routes work. Fixes #434

--- a/app/views/documentation/_what_is_new.md.erb
+++ b/app/views/documentation/_what_is_new.md.erb
@@ -23,7 +23,7 @@ Unfortunately we had our first case of abuse today. So, we suspended a user whic
 involved us adding support for suspending a user!
 
 ### April 26
-There's now an [example page that you can try out your scraping skills on](#{examples_australian_members_of_parliament_documentation_index_path}). It's based on the official
+There's now an [example page that you can try out your scraping skills on](<%= examples_australian_members_of_parliament_documentation_index_path %>). It's based on the official
 list of Australian members of parliament.
 
 ### April 19
@@ -32,7 +32,7 @@ You can now write scrapers in Perl thanks to the effort of [@lkundrak](/lkundrak
 ### April 18
 * In the API add support for atom feeds. Thank you to [@pezholio](https://github.com/pezholio) for this!
   It works in a really flexible way where you can make any field of your data map to different
-  bits of the atom feed like the content and the link in each item. [Have a look](#{api_documentation_index_path}).
+  bits of the atom feed like the content and the link in each item. [Have a look](<%= api_documentation_index_path %>).
 * Added this "What's new" page
 
 ### April 17
