Use cuttlefish to do the css inlining now

--- a/app/views/alert_mailer/alert_email.html.haml
+++ b/app/views/alert_mailer/alert_email.html.haml
@@ -5,6 +5,7 @@
     %meta(name="viewport" content="width=device-width")
     %meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
     %title= @subject
+    -# The css below will get automatically inlined when it's sent to cuttlefish.io for delivery
     %style
       :css
         /* -------------------------------------
